# matrix-simulation

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  dashboard.py  main.py  pyproject.toml  requirements.txt  test_systems.py
.github/workflows/: test.yml
backend/api/: main.py  state.py
config/: default.yaml  parameter_landscape.yaml
dashboard/: controls.py
dashboard_legacy/: app.py  runner.py  state.py
docs/: code_review.md  configuration.md  dashboard_legacy.md  emergent_behaviors.md  references.md  systems.md  tuning_evidence.md
frontend/: package-lock.json  package.json
gui/: __init__.py
scripts/: sweep.py
src/: __init__.py  agency.py  agents.py  batch.py  beliefs.py  causal_graph.py  communication.py  config_loader.py  conflict.py  dreams.py  economy.py  emotions.py  engine.py  haven.py  knowledge.py  mate_selection.py  matrix_layer.py  mythology.py  narrator.py  nested_sim.py  persistence.py  portrait.py  programs.py  social.py  world.py
tests/: conftest.py  test_balance_integration.py  test_batch_and_causal.py  test_cinematic_chronicle_obituary.py  test_config_schema.py  test_consciousness_archaeology_soultrap.py  test_e2e_api.py  test_freewill_dreams.py  test_gnostic_language.py  test_haven.py  test_knowledge.py  test_mate_selection.py  test_matrix_choice.py  test_memory_bounds.py  test_mythology.py  test_nested_simulation.py  test_phase6_features.py  test_phase7c_features.py  test_portrait.py  test_programs.py  test_social.py  test_systems.py  test_websocket_data.py
(+94 files in other folders)
